--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang = "en">
 <head>
-
+	<link rel="shortcut icon" type="image/png" href="images/icon.png">
 	<meta charset="utf-8">
     <meta name="keywords" content="Josue, Josue Santos, Josue Santos-Ramirez, Coding, Josue Santos blog">
     <meta name="description" content="My name is Josue Santos-Ramirez. I am a current Freshman at the California State University of Monterey Bay (CSUMB). I plan to keep up on everything I have done in this website. For Example, Projects, Resume, and Work Experiences/Internships.">
