--- a/index.html
+++ b/index.html
@@ -19,15 +19,32 @@
 
      		<nav>
         		<ul>
-          			<li><a href="josuesantos.me">Home</a></li>
+          			<li><a href="index.html">Home</a></li>
           			<li><a href="projects.html">Projects</a></li>
-          			<li><a href="#">Resume</a></li>
+          			<li><a href="resume.html">Resume</a></li>
         		</ul>
       		</nav>
     	</div>
   </header>
   <div class="body">
-
+  	<div class="aboutme">
+  		<h1 id="bodyheader">About Me</h1>
+  		<p id="bodytext">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+  		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+  		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+  		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+  		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+  		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  	</div>
+  	<div class="social">
+  		<h1>Social</h1>
+  		<p id="socialtext">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+  		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+  		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+  		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+  		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+  		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  	</div>
   </div>
 </body>
 </html>
