--- a/html/blog.html
+++ b/html/blog.html
@@ -20,10 +20,11 @@
      		<nav>
         		<ul>
           			<li><a href="index.html">Home</a></li>
-          			<li><a href="projects.html">Projects</a></li>
-          			<li><a href="resume.html">Resume</a></li>
+          			<li><a href="html/projects.html">Projects</a></li>
+          			<li><a href="html/resume.html">Resume</a></li>
+                <li><a href="html/blog.html">Blog</a></li>
         		</ul>
-      		</nav>
+      	</nav>
     	</div>
   </header>
   <div class="body">
