--- a/index.html
+++ b/index.html
@@ -8,43 +8,43 @@
     <meta name="description" content="My name is Josue Santos-Ramirez. I am a current Freshman at the California State University of Monterey Bay (CSUMB). I plan to keep up on everything I have done in this website. For Example, Projects, Resume, and Work Experiences/Internships.">
     <!--External-->
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/small.css" media="(max-width: 630px)">
+    <link rel="stylesheet" href="css/small.css" media="(max-width: 561px)">
+    <script src="./bar.js"></script>
 
 </head>
 <body>
 	<header>
     	<div class="container">
     		<img class="icon" src="images/icon.png">
-      		<h1 class="logo">Josue Santos</h1>
-
-     		<nav>
+      	<h1 class="logo">Josue Santos</h1>
+          <nav>
         		<ul>
           			<li><a href="index.html">Home</a></li>
-          			<li><a href="projects.html">Projects</a></li>
-          			<li><a href="resume.html">Resume</a></li>
+          			<li><a href="html/projects.html">Projects</a></li>
+          			<li><a href="html/resume.html">Resume</a></li>
+                <li><a href="html/blog.html">blog</a></li>
         		</ul>
       		</nav>
     	</div>
   </header>
-  <div class="body">
-  	<div class="aboutme">
-  		<h1 id="bodyheader">About Me</h1>
-  		<p id="bodytext">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-  		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-  		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-  		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-  		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-  		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-  	</div>
-  	<div class="social">
-  		<h1>Social</h1>
-  		<p id="socialtext">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-  		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-  		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-  		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-  		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-  		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-  	</div>
+  <div class="box">
+    <div class="body">
+  	 <div class="aboutme">
+  		  <h1 id="bodyheader">About Me</h1>
+  		  <p id="bodytext">My name is Josue Santos-Ramirez. I am a current Freshman at the California State University of Monterey Bay (CSUMB). I am currently majoring in computer science to become a software engineer. I plan to keep up with everything I have made in my career with this website. For Example, Projects, Resume, and Work Experiences/Internships. I am also trying to make a blog section so that you guys can keep up with what I do in my life. Apart from all this technical stuff, I like to play soccer with my free time and solve some puzzles. When I'm at home, I like to code all day because it fills my heart with joy. Hopefully this website works out and takes me far in the computer science industry.</p>
+        <img class="bodyimage" src="images/icon.png">
+  	 </div>
+  	 <div class="social">
+  		  <h1>Social</h1>
+        <img class="socialimage" src="images/icon.png">
+  		  <p id="socialtext">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+  		  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+  		  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+  		  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+  		  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+  		  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  	 </div>
+    </div>
   </div>
 </body>
 </html>
