--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
 	<title>Home</title>
 	<link rel="shortcut icon" type="image/png" href="images/icon.png">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8">
-    <meta name="keywords" content="Josue, Josue Santos, Josue Santos-Ramirez, Coding, Josue Santos blog">
-    <meta name="description" content="My name is Josue Santos-Ramirez. I am a current Freshman at the California State University of Monterey Bay (CSUMB). I plan to keep up on everything I have done in this website. For Example, Projects, Resume, and Work Experiences/Internships.">
-    <!--External-->
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/small.css" media="(max-width: 561px)">
-    <script src="./bar.js"></script>
+  <meta name="keywords" content="Josue, Josue Santos, Josue Santos-Ramirez, Coding, Josue Santos blog">
+  <meta name="description" content="My name is Josue Santos-Ramirez. I am a current Freshman at the California State University of Monterey Bay (CSUMB). I plan to keep up on everything I have done in this website. For Example, Projects, Resume, and Work Experiences/Internships.">
+  <!--External-->
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/small.css" media="(max-width: 561px)">
+  <script src="./bar.js"></script>
 
 </head>
 <body>
