--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="My name is Josue Santos-Ramirez. I am a current Freshman at the California State University of Monterey Bay (CSUMB). I plan to keep up on everything I have done in this website. For Example, Projects, Resume, and Work Experiences/Internships.">
   <!--External-->
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/small.css" media="(max-width: 561px)">
+  <link rel="stylesheet" href="css/small.css" media="(max-width: 530px)">
   <script src="./bar.js"></script>
 
 </head>
@@ -21,9 +21,9 @@
           <nav>
         		<ul>
           			<li><a href="index.html">Home</a></li>
-          			<li><a href="html/projects.html">Projects</a></li>
-          			<li><a href="html/resume.html">Resume</a></li>
-                <li><a href="html/blog.html">blog</a></li>
+          			<li><a href="projects.html">Projects</a></li>
+          			<li><a href="resume.html">Resume</a></li>
+                <li><a href="blog.html">blog</a></li>
         		</ul>
       		</nav>
     	</div>
