--- a/resume.html
+++ b/resume.html
@@ -15,16 +15,15 @@
 	<header>
     	<div class="container">
     		<img class="icon" src="images/icon.png">
-      		<h1 class="logo">Josue Santos</h1>
-
+        <h1 class="logo">Josue Santos</h1>
      		<nav>
-        		<ul>
-          			<li><a href="index.html">Home</a></li>
-          			<li><a href="html/projects.html">Projects</a></li>
-          			<li><a href="html/resume.html">Resume</a></li>
-                <li><a href="html/blog.html">Blog</a></li>
-        		</ul>
-      	</nav>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="resume.html">Resume</a></li>
+            <li><a href="blog.html">Blog</a></li>
+          </ul>
+        </nav>
     	</div>
   </header>
   <div class="body">
