--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <!--External-->
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/small.css" media="(max-width: 530px)">
-  <script src="./bar.js"></script>
 
 </head>
 <body>
@@ -43,10 +42,11 @@
   		  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
   		  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
   		  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-  		  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  		  proident, sunt in culpa qui officia deserunt mollit anim id est laborumm.</p>
   	 </div>
     </div>
   </div>
+  <script src="JavaScript/bar.js"></script>
 </body>
 </html>
 
