Fixed Menu Animation
Made a menu for mobile devices so the words weren't all cluster together when the device was small. I made small fixes to make the website responsive and played around with design.

--- a/resume.html
+++ b/resume.html
@@ -1,39 +1,43 @@
 <!DOCTYPE html>
 <html lang = "en">
 <head>
-	<title>Home</title>
-	<link rel="shortcut icon" type="image/png" href="images/icon.png">
-	<meta charset="utf-8">
-    <meta name="keywords" content="Josue, Josue Santos, Josue Santos-Ramirez, Coding, Josue Santos blog">
-    <meta name="description" content="My name is Josue Santos-Ramirez. I am a current Freshman at the California State University of Monterey Bay (CSUMB). I plan to keep up on everything I have done in this website. For Example, Projects, Resume, and Work Experiences/Internships.">
-    <!--External-->
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/small.css" media="(max-width: 630px)">
+  <title>Josue Santos | Resume</title>
+  <link rel="shortcut icon" type="image/png" href="images/icon.png">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+  <meta name="keywords" content="Josue, Josue Santos, Josue Santos-Ramirez, Coding, Josue Santos blog">
+  <meta name="description" content="My name is Josue Santos-Ramirez. I am a current Freshman at the California State University of Monterey Bay (CSUMB). I plan to keep up on everything I have done in this website. For Example, Projects, Resume, and Work Experiences/Internships.">
+  <!--External-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/small.css" media="(max-width: 630px)">
 
 </head>
 <body>
-	<header>
-    	<div class="container">
-    		<img class="icon" src="images/icon.png">
-        <h1 class="logo">Josue Santos</h1>
-     		<nav>
+  <div class="container">
+    <div class="navbar">
+      <img class="icon" src="images/icon.png">
+      <h1 class="logo">Josue Santos</h1>
+        <nav>
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="projects.html">Projects</a></li>
             <li><a href="resume.html">Resume</a></li>
-            <li><a href="blog.html">Blog</a></li>
+            <li><a href="blog.html">blog</a></li>
+            <i class="fa fa-bars"></i>
           </ul>
         </nav>
-    	</div>
-  </header>
-  <div class="body">
-  	
+        <div class="dropMenu">
+          <div class="menu-content">
+               <a href="index.html"><i class="fa fa-home"></i><a/><a href="index.html">Home</a>
+               <a href="projects.html"><i class="fa fa-rocket"></i><a/><a href="projects.html">Projects</a>
+               <a href="resume.html"><i class="fa fa-file"></i><a/><a href="resume.html">Resume</a>
+               <a href="blog.html"><i class="fa fa-comments"></i><a/><a href="blog.html">Blog</a>
+               <i class="fa fa-times"></i>
+          </div>
+        </div>
+    </div>
   </div>
+  <script src="JavaScript/bar.js"></script>
 </body>
 </html>
-
-
-
-
-
-
