--- a/index.html
+++ b/index.html
@@ -1,49 +1,58 @@
 <!DOCTYPE html>
 <html lang = "en">
 <head>
-	<title>Home</title>
+	<title>Josue Santos | Home</title>
 	<link rel="shortcut icon" type="image/png" href="images/icon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8">
   <meta name="keywords" content="Josue, Josue Santos, Josue Santos-Ramirez, Coding, Josue Santos blog">
   <meta name="description" content="My name is Josue Santos-Ramirez. I am a current Freshman at the California State University of Monterey Bay (CSUMB). I plan to keep up on everything I have done in this website. For Example, Projects, Resume, and Work Experiences/Internships.">
   <!--External-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/small.css" media="(max-width: 530px)">
+  <link rel="stylesheet" href="css/small.css" media="(max-width: 630px)">
 
 </head>
 <body>
-	<header>
-    	<div class="container">
-    		<img class="icon" src="images/icon.png">
-      	<h1 class="logo">Josue Santos</h1>
-          <nav>
-        		<ul>
-          			<li><a href="index.html">Home</a></li>
-          			<li><a href="projects.html">Projects</a></li>
-          			<li><a href="resume.html">Resume</a></li>
-                <li><a href="blog.html">blog</a></li>
-        		</ul>
-      		</nav>
-    	</div>
-  </header>
-  <div class="box">
+  <div class="container">
+    <div class="navbar">
+      <img class="icon" src="images/icon.png">
+      <h1 class="logo">Josue Santos</h1>
+        <nav>
+        	<ul>
+          	<li><a href="index.html">Home</a></li>
+          	<li><a href="projects.html">Projects</a></li>
+          	<li><a href="resume.html">Resume</a></li>
+            <li><a href="blog.html">blog</a></li>
+            <i class="fa fa-bars"></i>
+        	</ul>
+      	</nav>
+        <div class="dropMenu">
+          <div class="menu-content">
+               <a href="index.html"><i class="fa fa-home"></i><a/><a href="index.html">Home</a>
+               <a href="projects.html"><i class="fa fa-rocket"></i><a/><a href="projects.html">Projects</a>
+               <a href="resume.html"><i class="fa fa-file"></i><a/><a href="resume.html">Resume</a>
+               <a href="blog.html"><i class="fa fa-comments"></i><a/><a href="blog.html">Blog</a>
+               <i class="fa fa-times"></i>
+          </div>
+        </div>
+    </div>
     <div class="body">
-  	 <div class="aboutme">
+      <div class="aboutme">
   		  <h1 id="bodyheader">About Me</h1>
-  		  <p id="bodytext">My name is Josue Santos-Ramirez. I am a current Freshman at the California State University of Monterey Bay (CSUMB). I am currently majoring in computer science to become a software engineer. I plan to keep up with everything I have made in my career with this website. For Example, Projects, Resume, and Work Experiences/Internships. I am also trying to make a blog section so that you guys can keep up with what I do in my life. Apart from all this technical stuff, I like to play soccer with my free time and solve some puzzles. When I'm at home, I like to code all day because it fills my heart with joy. Hopefully this website works out and takes me far in the computer science industry.</p>
         <img class="bodyimage" src="images/icon.png">
-  	 </div>
-  	 <div class="social">
-  		  <h1>Social</h1>
-        <img class="socialimage" src="images/icon.png">
-  		  <p id="socialtext">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-  		  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-  		  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-  		  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-  		  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-  		  proident, sunt in culpa qui officia deserunt mollit anim id est laborumm.</p>
-  	 </div>
+  		  <p id="bodytext">My name is Josue Santos-Ramirez. I am a current Freshman at the California State University of Monterey Bay (CSUMB). I am currently majoring in computer science to become a software engineer. I plan to keep up with everything I have made in my career with this website. For Example, Projects, Resume, and Work Experiences/Internships. I am also trying to make a blog section so that you guys can keep up with what I do in my life. Apart from all this technical stuff, I like to play soccer with my free time and solve some puzzles. When I'm at home, I like to code all day because it fills my heart with joy. Hopefully this website works out and takes me far in the computer science industry.</p>
+      </div>
+    </div>
+  	<div class="social">
+  		<h1>Social</h1>
+      <img class="socialimage" src="images/icon.png">
+  		<p id="socialtext">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+  		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+  		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+  		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+  		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+  		proident, sunt in culpa qui officia deserunt mollit anim id est laborumm.</p>
     </div>
   </div>
   <script src="JavaScript/bar.js"></script>
