Fixed nav bar bug
Made a few changes it to make it responsive and fixed the nav bar bug where the text would get glitched

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!--External-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/small.css" media="(max-width: 630px)">
+  <link rel="stylesheet" href="css/small.css" media="(max-width: 760px)">
 
 </head>
 <body>
@@ -23,8 +23,10 @@
           	<li><a href="index.html">Home</a></li>
           	<li><a href="projects.html">Projects</a></li>
           	<li><a href="resume.html">Resume</a></li>
-            <li><a href="blog.html">blog</a></li>
-            <i class="fa fa-bars"></i>
+            <li><a href="social.html">Social</a></li>
+            <span class="bars"><i class="fa fa-bars"></i></span>
+            <span class="times"><i class="fa fa-times"></i></span>
+
         	</ul>
       	</nav>
         <div class="dropMenu">
@@ -32,8 +34,7 @@
                <a href="index.html"><i class="fa fa-home"></i><a/><a href="index.html">Home</a>
                <a href="projects.html"><i class="fa fa-rocket"></i><a/><a href="projects.html">Projects</a>
                <a href="resume.html"><i class="fa fa-file"></i><a/><a href="resume.html">Resume</a>
-               <a href="blog.html"><i class="fa fa-comments"></i><a/><a href="blog.html">Blog</a>
-               <i class="fa fa-times"></i>
+               <a href="social.html"><i class="fa fa-comments"></i><a/><a href="social.html">Social</a>
           </div>
         </div>
     </div>
