--- a/social.html
+++ b/social.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang = "en">
 <head>
-  <title>Josue Santos | Blog</title>
+  <title>Josue Santos | Social</title>
   <link rel="shortcut icon" type="image/png" href="images/icon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
@@ -23,8 +23,9 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="projects.html">Projects</a></li>
             <li><a href="resume.html">Resume</a></li>
-            <li><a href="blog.html">blog</a></li>
-            <i class="fa fa-bars"></i>
+            <li><a href="social.html">Social</a></li>
+            <span class="bars"><i class="fa fa-bars"></i></span>
+            <span class="times"><i class="fa fa-times"></i></span>
           </ul>
         </nav>
         <div class="dropMenu">
@@ -32,8 +33,7 @@
                <a href="index.html"><i class="fa fa-home"></i><a/><a href="index.html">Home</a>
                <a href="projects.html"><i class="fa fa-rocket"></i><a/><a href="projects.html">Projects</a>
                <a href="resume.html"><i class="fa fa-file"></i><a/><a href="resume.html">Resume</a>
-               <a href="blog.html"><i class="fa fa-comments"></i><a/><a href="blog.html">Blog</a>
-               <i class="fa fa-times"></i>
+               <a href="social.html"><i class="fa fa-comments"></i><a/><a href="social.html">Social</a>
           </div>
         </div>
     </div>
